@@ -34,7 +34,7 @@
 	of the authors and should not be interpreted as representing official policies, 
 	either expressed or implied, of the NAS4Free Project.
 */
-require_once("config.inc");
+require_once("/etc/inc/config.inc");
 //------------------------------------------------------------------------------
 // Configuration Variables
 
